refactor: service tests